SAP UI5 change 2

--- a/PostPrediction/src/main/webapp/i18n/i18n.properties
+++ b/PostPrediction/src/main/webapp/i18n/i18n.properties
@@ -14,3 +14,6 @@ PayrollCheckBoxText=Payroll
 AccrualCheckBoxText=Accrual
 FinancialAdjustCheckBoxText=Financial Adjustment
 GenerateButtonText=Generate
+
+# Prediction List
+predictionListTitle=Prediction Items
